--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ticom Toys</title>
+    <title>Integración continua</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
